# silly_utils

./: .gitignore  CMakeLists.txt  CMakeSettings.json.bak  FUNCTIONS.md  LICENSE  README.md  USAGE.md  Unix Philosophy,md  format_all.bat
examples/: CMakeLists.txt  silly_utils_example.cpp
examples/function/: CMakeLists.txt
examples/project/: .gitignore  CMakeLists.txt
extend/ascii_grid_image/: CMakeLists.txt  ascii_grid_image.cpp  ascii_grid_image.h
lucenepp/: CMakeLists.txt
lucenepp/cmake/: Lucene++Docs.cmake  dependencies.cmake
lucenepp/include/: CMakeLists.txt
lucenepp/src/: CMakeLists.txt
su/: CMakeLists.txt  marco.h  su.h  su_global.h  su_marco.h
su/3d/: silly_hill_shade.hpp
su/compress/: bz2_wrapper.cpp  bz2_wrapper.h  c7z_wrapper.cpp  c7z_wrapper.h  compress_zippp.hpp  gzip_wrapper.cpp  gzip_wrapper.h  libzippp.h  silly_7z.cpp  silly_7z.h  silly_bz2.cpp  silly_bz2.h  silly_compress.cpp  silly_compress.h  silly_compress_base.h  silly_gzip.cpp  silly_gzip.h  silly_minizip.cpp  silly_minizip.h  silly_rar.cpp  silly_rar.h  silly_zip.cpp  silly_zip.h  zip_wrapper.cpp  zip_wrapper.h
su/database/: silly_sql.h  silly_sql_studio.cpp  silly_sql_studio.h  sql_studio.hpp
su/datastruct/: TFF_ThreadSafeDeque.h  TFF_ThreadSafeList.h  TFF_ThreadSafeMap.h  TFF_ThreadSafeStack.h  silly_safe_bimap.h  silly_safe_deque.h  silly_safe_list.h  silly_safe_map.h  silly_safe_stack.h
su/datetime/: silly_posix_time.cpp  silly_posix_time.h  silly_time.cpp  silly_time.h  silly_time.hpp  silly_timer.cpp  silly_timer.h  simple_time.h
su/encode/: convert.hpp  encoder.hpp  silly_crc.cpp  silly_crc.h  silly_encode.cpp  silly_encode.h  silly_encrypt.cpp  silly_encrypt.h  silly_pinyin.cpp  silly_pinyin.h
su/files/: TFF_FileUtils.cpp  TFF_FileUtils.h  silly_file.cpp  silly_file.h  silly_file_lock.cpp  silly_file_lock.h  silly_memory_map.cpp  silly_memory_map.h  silly_mmap.cpp  silly_mmap.h  silly_schedule_file.cpp  silly_schedule_file.h  silly_xlsx.cpp  silly_xlsx.h
su/geo/: CPolygonToRaster.cpp  CPolygonToRaster.h  README.md  TFF_Geo.h  TFF_Pyramid.h  TFF_Screen.h  silly_dem.cpp  silly_dem.h  silly_geo.cpp  silly_geo.h  silly_geo_coll.cpp  silly_geo_coll.h  silly_geo_const.h  silly_geo_convert.cpp  silly_geo_convert.h  silly_geo_operation.cpp  silly_geo_operation.h  silly_geo_prop.cpp  silly_geo_prop.h  silly_geo_utils.cpp  silly_geo_utils.h  silly_geojson.cpp  silly_geojson.h  silly_geometry.cpp  silly_geometry.h  silly_iso_poly.cpp  silly_iso_poly.h  silly_map_layer.cpp  silly_map_layer.h  silly_polar.cpp  silly_polar.h  silly_projection.cpp  silly_projection.h  silly_pyramid.cpp  silly_pyramid.h  silly_raster_to_vector.cpp  silly_raster_to_vector.h  silly_spatialite.cpp  silly_spatialite.h  silly_spatialite_bak.cpp  (+3 more)
su/gpc/: gpc.cpp  gpc.h
su/graphics/: silly_bmp.h  silly_color.cpp  silly_color.h  silly_gif.h  silly_icon.cpp  silly_image_base.cpp  silly_image_base.h  silly_jpeg.cpp  silly_jpeg.h  silly_png.cpp  silly_png.h  silly_raw.cpp  silly_raw.h  silly_tif.h
su/hydrometeorology/: silly_record_tool.hpp  silly_record_tools.cpp  silly_record_tools.h  silly_station_rain.cpp  silly_station_rain.h
su/image/: bmp_utils.cpp  bmp_utils.h  gif_utils.cpp  gif_utils.h  icon_utils.cpp  icon_utils.h  jpeg_utils.cpp  jpeg_utils.h  png_utils.cpp  png_utils.h  raw_utils.cpp  raw_utils.h  silly_bmp.cpp  silly_cairo.cpp  silly_cairo.h  silly_color.h  silly_font.cpp  silly_font.h  silly_gif.cpp  silly_huge_stitcher.cpp  silly_huge_stitcher.h  silly_icon.h  silly_image_base.cpp  silly_image_base.h  silly_jpeg.cpp  silly_jpeg.h  silly_png.cpp  silly_png.h  silly_stitcher.h  silly_tif.cpp  tif_utils.cpp  tif_utils.h
su/ini/: silly_boost_ini_parser.cpp  silly_boost_ini_parser.h  silly_ini_parser_base.h  silly_simple_ini_parser.cpp  silly_simple_ini_parser.h  silly_tzx_ini_parser.cpp  silly_tzx_ini_parser.h
su/json/: json_to_obj.hpp  silly_jsonpp.cpp  silly_jsonpp.h
su/log/: silly_log.cpp  silly_log.h
su/loguru/: loguru.cpp  loguru.hpp
su/mapbox/: silly_mapbox.cpp  silly_mapbox.h
su/math/: TFF_Double2.h  TFF_Float2.h  TFF_Float4.h  TFF_FourCC.h  TFF_GeometryCalc.h  TFF_GeometryUtils.cpp  TFF_GeometryUtils.h  TFF_MathUtils.cpp  TFF_MathUtils.h  TFF_Point.h  TFF_Rectangle.h  TFF_Scaler.hpp  TFF_Vector.h  scaler.hpp  silly_bezier_curve.cpp  silly_bezier_curve.h  silly_interpolate.cpp  silly_interpolate.h  silly_least_square.cpp  silly_least_square.h  silly_math.cpp  silly_math.h  silly_math_const.h  silly_math_tools.cpp  silly_math_tools.h  silly_matrix.cpp  silly_matrix.h
su/metadata/: README.md  geotiff_utils.cpp  grib_utils.cpp  grib_utils.h  netcdf_utils.cpp  netcdf_utils.h  silly_ascii_grid.cpp  silly_ascii_grid.h  silly_egm.cpp  silly_egm.h  silly_grib2.cpp  silly_grib2.h  silly_micaps.cpp  silly_netcdf.h  silly_nmea.cpp  silly_nmea.h  silly_tzx_grid.h
su/otl/: otl_header.hpp  otl_tools.h
su/pool/: silly_bst_pool.h  silly_bst_pool_utils.h  silly_obj_pool.cpp  silly_obj_pool.h  silly_pool_manager.cpp  silly_pool_manager.h  silly_thread_pool.cpp  silly_thread_pool.h
su/proj/: CoordinateConvert.hpp  EllipsoidProj.h  silly_proj.cpp  silly_proj.h  silly_projection.cpp  silly_projection.h
su/radar/: silly_radar_grid.cpp  silly_radar_grid.h  silly_radar_occluder.cpp  silly_radar_occluder.h  silly_radar_polar.cpp  silly_radar_polar.h  silly_radar_proj.cpp  silly_radar_proj.h  silly_radar_proj_ez.cpp  silly_radar_proj_ez.h
su/render/: silly_grid_render.h  silly_render.h
su/singleton/: TFF_BoostSingleton.h  TFF_ThreadSafeSingleton.h  silly_singleton.h
su/spline/: siily_least_squares_fit.cpp  siily_least_squares_fit.h  silly_b_spline.cpp  silly_b_spline.h  silly_bezier_spline.cpp  silly_bezier_spline.h  silly_catmull_rom_spline.cpp  silly_catmull_rom_spline.h  silly_cube_spline.cpp  silly_cube_spline.h  silly_hermite_spline.cpp  silly_hermite_spline.h  silly_lagrange_spline.cpp  silly_lagrange_spline.h  silly_parabolic_spline.cpp  (+2 more)
test/: CMakeLists.txt  test.cpp  test.cpp.dly  test_database.hpp  test_jpeg.hpp  test_main.cpp  test_triangular.h
tools/: CMakeLists.txt
(+538 files in other folders)
